# RemoteGuard-Controller

./: .gitignore  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  Kconfig  overlay-native-sim.conf  overlay-tls-nrf91.conf  prj.conf
app/boards/: nrf9151_connectkit_nrf9151_ns.overlay
app/drivers/esp32cam/: CMakeLists.txt
app/src/common/: message_channel.c  message_channel.h
app/src/modules/camera/: CMakeLists.txt  camera_stub.c
app/src/modules/gnss/: CMakeLists.txt  Kconfig.gnss  gnss.c  gnss_modem_api.h  gnss_modem_api_nrf.c  gnss_stub.c
app/src/modules/mqtt_client/: CMakeLists.txt  Kconfig.mqtt_client  mqtt_client.c
app/src/modules/network/: CMakeLists.txt  network.c
app/src/modules/transport/: CMakeLists.txt  Kconfig.transport  transport.c  transport.h
app/src/modules/transport/client_id/: client_id.c
app/src/modules/transport/credentials_provision/: credentials_provision.c
app/src/modules/transport/publish_msg_factory/: CMakeLists.txt  publish_msg_factory.c  publish_msg_factory.h
app/src/modules/trigger/: trigger.c
scripts/: github_actions_summary.py  integration_coverage_report.py  run_integration_tests.sh
tests/integration/: broker_client.py  conftest.py  kconfig_utils.py  native_sim_dut.py  pytest.ini  requirements.txt  simulator_network_mock.py  simulator_runner.py  test_commands.py  test_disconnection.py
tests/integration/gnss/: __init__.py
tests/integration/mqtt/: __init__.py  broker_client.py  test_broker_smoke.py  test_kconfig_alignment.py  test_mqtt_gnss_mock_roundtrip.py  test_mqtt_native_sim_e2e.py
tests/utils/: gnss_mock.c  gnss_modem_mock.c  network_native_sim_fixup.c
tests/ztest/topic_format/: CMakeLists.txt  testcase.yaml
tests/ztest/topic_format/src/: main.c
(+2 files in other folders)
